<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="32dp"
    android:background="@drawable/dialogbg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sbank"
        android:textColor="#000000"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/totalcoinstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/acc"
        android:textColor="#777777"
        android:textSize="12dp" />

    <LinearLayout
        android:id="@+id/holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

<!--        <LinearLayout-->
<!--            android:id="@+id/blayoutmain"-->
<!--            style="@style/LayoutWrapper">-->

<!--            <LinearLayout-->
<!--                android:id="@+id/blayoutmain1"-->
<!--                style="@style/InvExt">-->

<!--                <TextView-->
<!--                    android:id="@+id/bs1"-->
<!--                    style="@style/InvText0" />-->

<!--                <TextView-->
<!--                    android:id="@+id/bst1"-->
<!--                    style="@style/InvText1"-->
<!--                    android:text="1s" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/blayoutmain5"-->
<!--                style="@style/InvExt">-->

<!--                <TextView-->
<!--                    android:id="@+id/bs5"-->
<!--                    style="@style/InvText0" />-->

<!--                <TextView-->
<!--                    android:id="@+id/bst5"-->
<!--                    style="@style/InvText1"-->
<!--                    android:text="5s" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/blayoutmain25"-->
<!--                style="@style/InvExt">-->

<!--                <TextView-->
<!--                    android:id="@+id/bs25"-->
<!--                    style="@style/InvText0" />-->

<!--                <TextView-->
<!--                    android:id="@+id/bst25"-->
<!--                    style="@style/InvText1"-->
<!--                    android:text="25s" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/blayoutmain100"-->
<!--                style="@style/InvExt">-->

<!--                <TextView-->
<!--                    android:id="@+id/bs100"-->
<!--                    style="@style/InvText0" />-->

<!--                <TextView-->
<!--                    android:id="@+id/bst100"-->
<!--                    style="@style/InvText1"-->
<!--                    android:text="100s" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/blayoutmain250"-->
<!--                style="@style/InvExt">-->

<!--                <TextView-->
<!--                    android:id="@+id/bs250"-->
<!--                    style="@style/InvText0" />-->

<!--                <TextView-->
<!--                    android:id="@+id/bst250"-->
<!--                    style="@style/InvText1"-->
<!--                    android:text="250s" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/blayoutmainall"-->
<!--                style="@style/InvExt"-->
<!--                android:visibility="gone">-->

<!--                <TextView-->
<!--                    android:id="@+id/bsall"-->
<!--                    style="@style/InvText0" />-->

<!--                <TextView-->
<!--                    android:id="@+id/bstall"-->
<!--                    style="@style/InvText1"-->
<!--                    android:text="@string/total" />-->
<!--            </LinearLayout>-->

<!--        </LinearLayout>-->


    </LinearLayout>

    <LinearLayout
        android:id="@+id/closebutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center|top"
            android:text="@string/close"
            android:textColor="#777777"
            android:textSize="12dp" />

    </LinearLayout>


</LinearLayout>
