<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            tools:context=".ui.home.HomeFragment">
            <androidx.recyclerview.widget.RecyclerView
                android:background="@drawable/white_border"
                android:id="@+id/fragment_home_rvIndicator"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="44dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:padding="@dimen/_2sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_indicator" />
            <TextView
                android:id="@+id/tvRaida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RAIDA"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/fragment_home_rvIndicator"
                app:layout_constraintEnd_toEndOf="@+id/fragment_home_rvIndicator"
                app:layout_constraintTop_toTopOf="@+id/fragment_home_rvIndicator"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_home_rvIndicator" />
            <TextView
                android:id="@+id/home_fragment_tvCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_88sdp"
                android:fontFamily="@font/gotham_medium"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_home_rvIndicator" />
            <TextView
                android:id="@+id/home_fragment_tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:text="0"
                android:layout_marginBottom="@dimen/_25sdp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/home_fragment_tvCoins"
                app:layout_constraintTop_toTopOf="@+id/home_fragment_tvCoins"
                app:layout_constraintBottom_toBottomOf="@+id/home_fragment_tvCoins" />

            <!-- other views -->
            <TextView
                android:id="@+id/home_fragment_avPrice"
                android:text="@string/av_price"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/colorGreyDark"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_fragment_tvPrice" />
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/play_coin_icon"
                android:layout_marginTop="@dimen/_40sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_fragment_avPrice" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home_rvDenomination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:scrollbars="none"
                app:layout_constraintBottom_toTopOf="@+id/home_fragment_llWithdraw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_fragment_tvPrice"
                app:layout_constraintVertical_bias="0.469">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/home_fragment_llWithdraw"
                android:layout_width="0dp"
                android:layout_height="@dimen/_110sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/home_fragment_llDeposit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_circle_add" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/gotham_medium"
                    android:gravity="center"
                    android:text="@string/label_deposit"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_fragment_llDeposit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_110sdp"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/home_fragment_llWithdraw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/home_fragment_llWithdraw"
                app:layout_constraintTop_toTopOf="@+id/home_fragment_llWithdraw">

            <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_circle_subtract" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/gotham_medium"
                    android:gravity="center"
                    android:text="@string/label_withdraw"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>